intTests/test_type_errors/err016.log.good
Loading file "err016.saw"
Type errors:
  err016.saw:12:13-12:14: Error: Type mismatch.
    Perhaps a function was not given enough arguments?
    Expected: Int
    Found:    Int -> t.1

  err016.saw:12:11-12:12: Note: The type Int arises from the type of this term
  err016.saw:12:13-12:14: Note: The type Int -> t.1 arises from the context of the term


FAILED
